Oversigt fungerer ca

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 *.xml
 *.properties
 *.xml
+FodboldTurnering/nbproject/private/private.properties
+FodboldTurnering/nbproject/private/private.xml
+FodboldTurnering/nbproject/private/private.properties
