Rettet fejl og slettet klasser

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 FodboldTurnering/nbproject/private/private.properties
 FodboldTurnering/nbproject/private/private.xml
 FodboldTurnering/nbproject/private/private.properties
+/FodboldTurnering/dist/
